# PhysicsCmulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp
PhysicsCmulation/: PhysicsCmulation.h
PhysicsCmulation/include/: Person.h
PhysicsCmulation/physics/include/: ForceObject.h  Function.h  PhysicalObject.h
PhysicsCmulation/physics/src/: ForceObject.cpp  Function.cpp  PhysicalObject.cpp
PhysicsCmulation/shapes/include/: Node.h  Point.h  Polygon.h  Triangle.h
PhysicsCmulation/shapes/src/: Point.cpp  Polygon.cpp  Triangle.cpp
PhysicsCmulation/src/: Person.cpp
